# plutus-starting-template

./: .gitignore  README.md  cabal.project  hie.yaml  plutus-starting-template.cabal
app/: generate-PDR-files.hs  say-hello.hs
examples/src/PDR/: Compiler.hs  Validator.hs
src/: MyModule.hs
