cabal-version:      3.0
name:               plutus-starting-template
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
license-files:      LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      MyModule
      PDR.Compiler
      PDR.Validator
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      cardano-api -any,
      serialise -any,
    hs-source-dirs: src examples/src

executable say-hello
  import: lang
  main-is: say-hello.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.9 && < 5,

executable generate-PDR-files
  import: lang
  main-is: generate-PDR-files.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.9 && < 5,
    plutus-starting-template -any,
    cardano-api -any,
